[tool.poetry]
name = "comeon"
version = "0.1.0"
description = "Create command line interface toolkit using type hints"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
license = "MIT"

repository = "https://github.com/zen-xu/comeon"

keywords = ["cli", "type hints", "pydantic", "click"]

classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.4"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
isort = "^4.3.21"
autoflake = "^1.3.1"
ipython = "^7.13.0"
mypy = "^0.761"

[[tool.poetry.source]]
name = 'ali'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
